Fixed bugs, refactored some events and added and fixed new animations

--- a/Assets/Scripts/Population/Population.asmdef
+++ b/Assets/Scripts/Population/Population.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:34e426bf6b704e14a942149ed32b37ad",
         "GUID:efa45043feb7e4147a305b73b5cea642",
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:a829522f7442a3d4ea95c0a62098451e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
